# brvc

./: .envrc  .gitignore  Makefile  README.md  cli  gr.py  pyproject.toml
brvc/: main.py
brvc/lib/config/: v2_config.py
brvc/lib/features/emb/: convert.py  hubert.py  whisper.py
brvc/lib/features/emb/hubert/: convert.py  convert2.py
brvc/lib/features/f0/: f0_predictor.py
brvc/lib/features/f0/rmvpe/: __init__.py  deepunet.py  e2e.py  mel.py  rmvpe.py  serialization.py  stft.py
brvc/lib/features/pitch/: __init__.py  crepe.py  pitch_predictor.py  swift.py
brvc/lib/infer/: debug.py  infer.py  infer_1.py  inter.py  recorder.py
brvc/lib/infer/utils/: resample.py  rms.py
brvc/lib/models/: attentions.py  ffn.py  generator_nsf.py  res_block2.py  rvc.py  source_module_hn_nsf.py  text_encoder.py
brvc/lib/modules/: attentions.py  attentions_enc.py  discriminators.py  feed_forward.py  ffn.py  flip.py  generator_nsf.py  multihead_attention.py  posterior_encoder.py  res_block.py  res_block2.py  residual_coupling_block.py  rvc.py  sine_gen.py  source_module_hn_nsf.py  synthesizer_trn_ms.py  text_encoder.py  wn.py
brvc/lib/modules/matcha/: flow_matching.py  matcha_tts.py  maximum_path.py  model.py  monotonic_align.py  transformer.py
brvc/lib/modules/mvc/: base_module.py  feature_enc.py  mvc.py
brvc/lib/train/: config.py  extract_f0.py  extract_features.py  loss.py  preprocess.py  run_train.py  sampler.py  train.py  train_model.py
brvc/lib/train/utils/: collect.py  data.py  dataset.py  mel_processing.py  path.py  save_final.py
brvc/lib/utils/: audio.py  misc.py  padding.py  preprocess.py  slice.py  slicer.py
brvc/utils/: log.py  pyproject.toml
brvc/utils/hubert/: main.py  pyproject.toml
notebooks/: train.ipynb
