[project]
name = "brvc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "av>=16.0.1",
    "gradio>=5.44.1",
    "jurigged>=0.6.1",
    "librosa>=0.11.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.7.0",
    "torchcrepe>=0.0.24",
    "transformers>=4.56.1",
    "typed-argument-parser>=1.11.0",
    # "fairseq",
    "datasets>=2.14.4",
    "protobuf>=6.33.0",
    "swift-f0>=0.1.2",
    "safetensors>=0.6.2",
    "numba>=0.62.1",
    "diffusers>=0.35.2",
    "pyrefly>=0.41.0",
    "python-json-logger>=4.0.0",
    "einops>=0.8.1",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
# [project.scripts]
# hello = "jurigged"

# [tool.uv]
# package = true


[tool.uv.sources]
# fairseq = { git = "https://github.com/yamada-sexta/fairseq.git" }

[tool.uv.workspace]
members = [
    # "brvc/utils",
    # "brvc/utils/hubert",
    # "hubert",
]
# torch = [
#   { index = "pytorch-cu126", marker = "sys_platform == 'linux'"},
#   { index = "pytorch-cpu", marker = "sys_platform != 'linux'"},
# ]

# [[tool.uv.index]]
# name = "pytorch-cu126"
# url = "https://download.pytorch.org/whl/cu126"
# secondary = true

# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# secondary = true
